@@ -8,6 +8,7 @@ Version 6.0.0 - DEV
    problem information from the scoreboard. Thanks Marc Furon.
  - Allow configuration variables to be publicly viewable or not.
  - Add helper script dj_run_chroot to perform chroot operations.
+ - Use d3 charts instead of float for statistics.
  - [security] Fix team permission for viewing clarification categories.
 
 Version 5.2.0 - DEV
